fix coverletter addresses